<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".HomeActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commands" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/run" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/pause" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timings" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_add_timing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/add" />

            <Button
                android:id="@+id/button_remove_timing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/remove" />

            <CheckBox
                android:id="@+id/checkbox_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/auto" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

        <CheckBox
            android:id="@+id/fan_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fan_on" />

        <CheckBox
            android:id="@+id/check_stuck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_stuck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stuck_range" />

            <EditText
                android:hint="@string/range"
                android:id="@+id/stuck_range"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backwards_min" />

            <EditText
                android:id="@+id/backwards_min"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/minutes"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backwards_rot_min" />

            <EditText
                android:id="@+id/backwards_rot_min"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/minutes"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left_speed" />

            <EditText
                android:id="@+id/left_speed"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/speed"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right_speed" />

            <EditText
                android:id="@+id/right_speed"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/speed"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>